[chromedriver] Re-enable tests for failure info

Re-enable testWindowFullScreen and Maximize so that we can look into
flakiness from log. Add state normal check after changing to normal
and return error status if failed. Add sleep and retry in test full
screen to see if it can help with size change.

Bug: chromium:867511
Change-Id: I17c551135775eaf607ff2f2b92f9488a5b8f4716
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2231810
Commit-Queue: Shengfa Lin <shengfa@google.com>
Reviewed-by: John Chen <johnchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#776307}